# WEB_HW12

./: pyproject.toml
app/: main.py
app/api/: auth_routes.py  users_routes.py
app/dependencies/: db.py
app/models/: base.py  client.py
app/repository/: auth.py  users.py
app/schemas/: client.py  user.py
app/services/: auth.py  users.py
